--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.562.0",
+    "lucide-react": "0.460.0",
     "react-dom": "^19.2.3",
     "react": "^19.2.3"
   },
