--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.3.1",
+    "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "lucide-react": "0.460.0"
   },
